# lvgl_pc_simulator_vscode

./: CMakeLists.txt  lv_conf.h  main.c
App/Memory/: Memory.c  Memory.h
Utils/List/: List.h
Utils/MemoryManager/: MemoryManager.c  MemoryManager.h
Utils/ResourceManager/: ResourceManager.c  ResourceManager.h
